--- a/References/references.bib
+++ b/References/references.bib
@@ -212,3 +212,188 @@
 	file = {Esswood - CheriOS designing an untrusted single-address-spa.pdf:/Users/akilan/Zotero/storage/YGIBFTD5/Esswood - CheriOS designing an untrusted single-address-spa.pdf:application/pdf},
 }
 
+@book{wilkes_cambridge_1979,
+	location = {New York},
+	title = {The Cambridge {CAP} computer and its operating system},
+	isbn = {978-0-444-00357-7 978-0-444-00358-4},
+	series = {The computer science library operating and programming systems series},
+	pagetotal = {165},
+	number = {6},
+	publisher = {North Holland},
+	author = {Wilkes, Maurice V. and Needham, Roger M.},
+	date = {1979},
+	langid = {english},
+	file = {Wilkes and Needham - 1979 - The Cambridge CAP computer and its operating syste.pdf:/Users/akilan/Zotero/storage/VIQTWZS3/Wilkes and Needham - 1979 - The Cambridge CAP computer and its operating syste.pdf:application/pdf},
+}
+
+@article{fillo_mmachine_nodate,
+	title = {The M–Machine Multicomputer},
+	author = {Fillo, Marco and Keckler, Stephen W and Dally, William J and Carter, Nicholas P and Chang, Andrew and Gurevich, Yevgeny and Lee, Whay S},
+	langid = {english},
+	file = {Fillo et al. - The M–Machine Multicomputer.pdf:/Users/akilan/Zotero/storage/LD95UQTM/Fillo et al. - The M–Machine Multicomputer.pdf:application/pdf},
+}
+
+@inproceedings{kwon_low-fat_2013,
+	location = {New York, {NY}, {USA}},
+	title = {Low-fat pointers: compact encoding and efficient gate-level implementation of fat pointers for spatial safety and capability-based security},
+	isbn = {978-1-4503-2477-9},
+	url = {https://dl.acm.org/doi/10.1145/2508859.2516713},
+	doi = {10.1145/2508859.2516713},
+	series = {{CCS} '13},
+	shorttitle = {Low-fat pointers},
+	abstract = {Referencing outside the bounds of an array or buffer is a common source of bugs and security vulnerabilities in today's software. We can enforce spatial safety and eliminate these violations by inseparably associating bounds with every pointer (fat pointer) and checking these bounds on every memory access. By further adding hardware-managed tags to the pointer, we make them unforgeable. This, in turn, allows the pointers to be used as capabilities to facilitate fine-grained access control and fast security domain crossing. Dedicated checking hardware runs in parallel with the processor's normal datapath so that the checks do not slow down processor operation (0\% runtime overhead). To achieve the safety of fat pointers without increasing program state, we compactly encode approximate base and bound pointers along with exact address pointers for a 46b address space into one 64-bit word with a worst-case memory overhead of 3\%. We develop gate-level implementations of the logic for updating and validating these compact fat pointers and show that the hardware requirements are low and the critical paths for common operations are smaller than processor {ALU} operations. Specifically, we show that the fat-pointer check and update operations can run in a 4 ns clock cycle on a Virtex 6 (40nm) implementation while only using 1100 6-{LUTs} or about the area of a double-precision, floating-point adder.},
+	pages = {721--732},
+	booktitle = {Proceedings of the 2013 {ACM} {SIGSAC} conference on Computer \& communications security},
+	publisher = {Association for Computing Machinery},
+	author = {Kwon, Albert and Dhawan, Udit and Smith, Jonathan M. and Knight, Thomas F. and {DeHon}, Andre},
+	urldate = {2024-06-18},
+	date = {2013-11-04},
+	keywords = {capabilities, fat pointer, memory safety, processor, security, spatial confinement},
+	file = {Full Text PDF:/Users/akilan/Zotero/storage/CVVZYZS4/Kwon et al. - 2013 - Low-fat pointers compact encoding and efficient g.pdf:application/pdf},
+}
+
+@article{wulf_hydra_1974,
+	title = {{HYDRA}: the kernel of a multiprocessor operating system},
+	volume = {17},
+	issn = {0001-0782, 1557-7317},
+	url = {https://dl.acm.org/doi/10.1145/355616.364017},
+	doi = {10.1145/355616.364017},
+	shorttitle = {{HYDRA}},
+	abstract = {This paper describes the design philosophy of {HYDRA}—the kernel of an operating system for C.mmp, the Carnegie-Mellon Multi-Mini-Processor. This philosophy is realized through the introduction of a generalized notion of “resource,” both physical and virtual, called an “object.” Mechanisms are presented for dealing with objects, including the creation of new types, specification of new operations applicable to a given type, sharing, and protection of any reference to a given object against improper application of any of the operations defined with respect to that type of object. The mechanisms provide a coherent basis for extension of the system in two directions: the introduction of new facilities, and the creation of highly secure systems.},
+	pages = {337--345},
+	number = {6},
+	journaltitle = {Communications of the {ACM}},
+	shortjournal = {Commun. {ACM}},
+	author = {Wulf, W. and Cohen, E. and Corwin, W. and Jones, A. and Levin, R. and Pierson, C. and Pollack, F.},
+	urldate = {2024-06-18},
+	date = {1974-06},
+	langid = {english},
+	file = {Full Text:/Users/akilan/Zotero/storage/EIRBNTVF/Wulf et al. - 1974 - HYDRA the kernel of a multiprocessor operating sy.pdf:application/pdf},
+}
+
+@article{hardy_keykos_1985,
+	title = {{KeyKOS} architecture},
+	volume = {19},
+	issn = {0163-5980},
+	url = {https://dl.acm.org/doi/10.1145/858336.858337},
+	doi = {10.1145/858336.858337},
+	pages = {8--25},
+	number = {4},
+	journaltitle = {{ACM} {SIGOPS} Operating Systems Review},
+	shortjournal = {{SIGOPS} Oper. Syst. Rev.},
+	author = {Hardy, Norman},
+	urldate = {2024-06-18},
+	date = {1985-10-01},
+	file = {Full Text PDF:/Users/akilan/Zotero/storage/QSYKM6QN/Hardy - 1985 - KeyKOS architecture.pdf:application/pdf},
+}
+
+@article{rashid_mach_nodate,
+	title = {Mach: A System Software Kernel},
+	abstract = {The Mach operating system can be used as a system software kernel which can support a variety of operating system environments. Key elements of the Mach design which allow it to efficiently support system software include integrated virtual memory management and interprocess communication, multiple threads of control within one address space, support for transparent system trap callout and an object programming facility integrated with the Mach {IPC} mechanisms. Mach is currently available both from {CMU} and commercially on a wide range of uniprocessor and multiprocessor hardware.},
+	author = {Rashid, Richard and Julin, Daniel and Orr, Douglas and Sanzi, Richard and Baron, Robert and Forin, Alessandro and Golub, David and Jones, Michael},
+	langid = {english},
+	file = {Rashid et al. - Mach A System Software Kernel.pdf:/Users/akilan/Zotero/storage/UHLILYH9/Rashid et al. - Mach A System Software Kernel.pdf:application/pdf},
+}
+
+@inproceedings{baumann_multikernel_2009,
+	location = {Big Sky Montana {USA}},
+	title = {The multikernel: a new {OS} architecture for scalable multicore systems},
+	isbn = {978-1-60558-752-3},
+	url = {https://dl.acm.org/doi/10.1145/1629575.1629579},
+	doi = {10.1145/1629575.1629579},
+	shorttitle = {The multikernel},
+	abstract = {Commodity computer systems contain more and more processor cores and exhibit increasingly diverse architectural tradeoﬀs, including memory hierarchies, interconnects, instruction sets and variants, and {IO} conﬁgurations. Previous high-performance computing systems have scaled in speciﬁc cases, but the dynamic nature of modern client and server workloads, coupled with the impossibility of statically optimizing an {OS} for all workloads and hardware variants pose serious challenges for operating system structures.},
+	eventtitle = {{SOSP}09: {ACM} {SIGOPS} 22nd Symposium on Operating Systems Principles},
+	pages = {29--44},
+	booktitle = {Proceedings of the {ACM} {SIGOPS} 22nd symposium on Operating systems principles},
+	publisher = {{ACM}},
+	author = {Baumann, Andrew and Barham, Paul and Dagand, Pierre-Evariste and Harris, Tim and Isaacs, Rebecca and Peter, Simon and Roscoe, Timothy and Schüpbach, Adrian and Singhania, Akhilesh},
+	urldate = {2024-06-18},
+	date = {2009-10-11},
+	langid = {english},
+	file = {Baumann et al. - 2009 - The multikernel a new OS architecture for scalabl.pdf:/Users/akilan/Zotero/storage/4BVCRZN6/Baumann et al. - 2009 - The multikernel a new OS architecture for scalabl.pdf:application/pdf},
+}
+
+@article{watson_capsicum_nodate,
+	title = {Capsicum: practical capabilities for {UNIX}},
+	abstract = {Capsicum is a lightweight operating system capability and sandbox framework planned for inclusion in {FreeBSD} 9. Capsicum extends, rather than replaces, {UNIX} {APIs}, providing new kernel primitives (sandboxed capability mode and capabilities) and a userspace sandbox {API}. These tools support compartmentalisation of monolithic {UNIX} applications into logical applications, an increasingly common goal supported poorly by discretionary and mandatory access control. We demonstrate our approach by adapting core {FreeBSD} utilities and Google’s Chromium web browser to use Capsicum primitives, and compare the complexity and robustness of Capsicum with other sandboxing techniques.},
+	author = {Watson, Robert N M and Anderson, Jonathan and Kennaway, Kris and Laurie, Ben},
+	langid = {english},
+	file = {Watson et al. - Capsicum practical capabilities for UNIX.pdf:/Users/akilan/Zotero/storage/IAFXHJ8H/Watson et al. - Capsicum practical capabilities for UNIX.pdf:application/pdf},
+}
+
+@online{noauthor_department_nodate,
+	title = {Department of Computer Science and Technology: {CheriBSD}},
+	url = {https://www.cl.cam.ac.uk/research/security/ctsrd/cheri/cheribsd.html},
+	urldate = {2024-06-18},
+	file = {Department of Computer Science and Technology\: CheriBSD:/Users/akilan/Zotero/storage/3XQJWCXD/cheribsd.html:text/html},
+}
+
+@online{noauthor_msrc-security-researchpapers2020security_nodate,
+	title = {{MSRC}-Security-Research/papers/2020/Security analysis of {CHERI} {ISA}.pdf at master · microsoft/{MSRC}-Security-Research},
+	url = {https://github.com/microsoft/MSRC-Security-Research/blob/master/papers/2020/Security%20analysis%20of%20CHERI%20ISA.pdf},
+	abstract = {Security Research from the Microsoft Security Response Center ({MSRC}) - microsoft/{MSRC}-Security-Research},
+	titleaddon = {{GitHub}},
+	urldate = {2024-06-18},
+	langid = {english},
+	file = {Snapshot:/Users/akilan/Zotero/storage/ENF2KYRT/Security analysis of CHERI ISA.html:text/html},
+}
+
+@inproceedings{zaliva_formal_2024,
+	location = {La Jolla {CA} {USA}},
+	title = {Formal Mechanised Semantics of {CHERI} C: Capabilities, Undefined Behaviour, and Provenance},
+	isbn = {9798400703720},
+	url = {https://dl.acm.org/doi/10.1145/3617232.3624859},
+	doi = {10.1145/3617232.3624859},
+	shorttitle = {Formal Mechanised Semantics of {CHERI} C},
+	abstract = {Memory safety issues are a persistent source of security vulnerabilities, with conventional architectures and the C codebase chronically prone to exploitable errors. The {CHERI} research project has shown how one can provide radically improved security for that existing codebase with minimal modification, using unforgeable hardware capabilities in place of machine-word pointers in {CHERI} dialects of C, implemented as adaptions of Clang/{LLVM} and {GCC}. {CHERI} was first prototyped as extensions of {MIPS} and {RISC}-V; it is currently being evaluated by Arm and others with the Arm Morello experimental architecture, processor, and platform, to explore its potential for mass-market adoption, and by Microsoft in their {CHERIoT} design for embedded cores.},
+	eventtitle = {{ASPLOS} '24: 29th {ACM} International Conference on Architectural Support for Programming Languages and Operating Systems, Volume 1},
+	pages = {181--196},
+	booktitle = {Proceedings of the 29th {ACM} International Conference on Architectural Support for Programming Languages and Operating Systems, Volume 1},
+	publisher = {{ACM}},
+	author = {Zaliva, Vadim and Memarian, Kayvan and Almeida, Ricardo and Clarke, Jessica and Davis, Brooks and Richardson, Alexander and Chisnall, David and Campbell, Brian and Stark, Ian and Watson, Robert N. M. and Sewell, Peter},
+	urldate = {2024-06-18},
+	date = {2024-04-27},
+	langid = {english},
+	file = {Zaliva et al. - 2024 - Formal Mechanised Semantics of CHERI C Capabiliti.pdf:/Users/akilan/Zotero/storage/8Y2CRHBS/Zaliva et al. - 2024 - Formal Mechanised Semantics of CHERI C Capabiliti.pdf:application/pdf},
+}
+
+@article{watson_cheri_nodate,
+	title = {{CHERI} C/C++ Programming Guide},
+	abstract = {This document is a brief introduction to the {CHERI} C/C++ programming languages. We explain the principles underlying these language variants, and their grounding in {CHERI}’s multiple architectural instantiations: {CHERI}-{MIPS}, {CHERI}-{RISC}-V, and Arm’s Morello. We describe the most commonly encountered differences between these dialects and C/C++ on conventional architectures, and where existing software may require minor changes. We document new compiler warnings and errors that may be experienced compiling code with the {CHERI} Clang/{LLVM} compiler, and suggest how they may be addressed through typically minor source-code changes. We explain how modest language extensions allow selected software, such as memory allocators, to further reﬁne permissions and bounds on pointers. This guidance is based on our experience adapting the {FreeBSD} operating-system userspace, and applications such as {PostgreSQL} and {WebKit}, to run in a {CHERI} C/C++ capability-based programming environment. We conclude by recommending further reading.},
+	author = {Watson, Robert N M and Richardson, Alexander and Davis, Brooks and Baldwin, John and Chisnall, David and Clarke, Jessica and Filardo, Nathaniel and Moore, Simon W and Napierala, Edward and Sewell, Peter and Neumann, Peter G},
+	langid = {english},
+	file = {Watson et al. - CHERI CC++ Programming Guide.pdf:/Users/akilan/Zotero/storage/WHGQXE8P/Watson et al. - CHERI CC++ Programming Guide.pdf:application/pdf},
+}
+
+@article{esswood_cherios_nodate-1,
+	title = {{CheriOS}: designing an untrusted single-address-space capability operating system utilising capability hardware and a minimal hypervisor},
+	author = {Esswood, Lawrence G},
+	langid = {english},
+	file = {Esswood - CheriOS designing an untrusted single-address-spa.pdf:/Users/akilan/Zotero/storage/3IVKGYZ5/Esswood - CheriOS designing an untrusted single-address-spa.pdf:application/pdf},
+}
+
+@online{noauthor_architecture_nodate,
+	title = {The Architecture  of the Burroughs B-5000},
+	url = {https://www.smecc.org/The%20Architecture%20%20of%20the%20Burroughs%20B-5000.htm},
+	urldate = {2024-06-18},
+	file = {The Architecture  of the Burroughs B-5000:/Users/akilan/Zotero/storage/ELNL8VBQ/The Architecture  of the Burroughs B-5000.html:text/html},
+}
+
+@article{dennis_programming_1966,
+	title = {Programming semantics for multiprogrammed computations},
+	volume = {9},
+	issn = {0001-0782, 1557-7317},
+	url = {https://dl.acm.org/doi/10.1145/365230.365252},
+	doi = {10.1145/365230.365252},
+	abstract = {The semantics are defined for a number of meta-instructions which perform operations essential to the writing of programs in multiprogrammed computer systems. These meta-instructions relate to parallel processing, protecting of separate computations, program debugging, and the sharing among users of memory segments and other computing objects, the names of which are hierarchically structured. The language sophistication contemplated is midway between an assembly language and an advanced algebraic language.},
+	pages = {143--155},
+	number = {3},
+	journaltitle = {Communications of the {ACM}},
+	shortjournal = {Commun. {ACM}},
+	author = {Dennis, Jack B. and Van Horn, Earl C.},
+	urldate = {2024-06-18},
+	date = {1966-03},
+	langid = {english},
+	file = {Full Text:/Users/akilan/Zotero/storage/6MLX2U8V/Dennis and Van Horn - 1966 - Programming semantics for multiprogrammed computat.pdf:application/pdf},
+}
